--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,9 @@
 *.frankie linguist-language=polarfrankie
 
 # C++
-*.cpp *.hpp linguist-language=cpp
+*.cpp linguist-language=cpp
+*.hpp linguist-language=cpp
+
+# C
+*.c linguist-language=c
+*.h linguist-language=c
