Update `cmake` command
+ Added a `7z` micro that works on all platforms
+ Add a "dependencies" fetching cmake file
+ Removed and commented some cmake commands

--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,5 @@ node_modules
 supplements/VSCode-Extension/LICENSE
 
 # Generated transpiler build files
-transpiler/generated
+transpiler/build
+transpiler/dependencies
