Update ANNTLR4 generation scripts

--- a/transpiler/CMakeLists.txt
+++ b/transpiler/CMakeLists.txt
@@ -2,22 +2,22 @@
 cmake_minimum_required(VERSION 3.30)
 project(polar_frankie_transpiler)
 
+# Directories
+set(FRANKIE_CMAKE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+set(FRANKIE_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/source)
+
 # Include micros
-include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/micros.cmake)
+include(${FRANKIE_CMAKE_DIR}/micros.cmake)
 
 # Manage dependencies
-include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/dependencies.cmake)
+include(${FRANKIE_CMAKE_DIR}/dependencies.cmake)
 
-# C++ compiler must be 17
-set(CMAKE_CXX_STANDARD 17)
+# ANTLR4 files generation configs
+# (applys to "FrankieANTLR4Parser")
+set(FRANKIE_ANTLR4_LEXER_PATH ${FRANKIE_SOURCE_DIR}/ANTLR4/PolarFrankieLexer.g4)
+set(FRANKIE_ANTLR4_PARSER_PATH ${FRANKIE_SOURCE_DIR}/ANTLR4/PolarFrankieParser.g4)
+include(${FRANKIE_CMAKE_DIR}/antlr4/generate.cmake)
 
-# Compile files
-# target_include_directories(MyExecutable ...)
-# message(STATUS "Building transpiler...")
-# include_directories(${ANTLR4_RUNTIME_SRC_DIR})
-# add_executable(MyExecutable ${CMAKE_CURRENT_SOURCE_DIR}/source/parser/main-debug.cpp)
-# target_link_libraries(MyExecutable PRIVATE ${ANTLR4_RUNTIME_SRC_DIR})
-
-# if(NOT STATUS EQUAL 0)
-#    message(FATAL_ERROR "Failed to download file: ${ERROR_MESSAGES}")
-#endif()
+# Compile "FrankieANTLR4Parser" files
+message(STATUS "Building ANTLR4 parser...")
+add_executable(FrankieANTLR4Parser ${FRANKIE_SOURCE_DIR}/parser/main-debug.cpp)
