--- a/transpiler/CMakeLists.txt
+++ b/transpiler/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Basic info
-cmake_minimum_required(VERSION 3.30)
+cmake_minimum_required(VERSION 3.30 FATAL_ERROR)
 project(polar_frankie_transpiler)
 
 # Directories
@@ -16,7 +16,7 @@ include(${FRANKIE_CMAKE_DIR}/dependencies.cmake)
 # (applys to "FrankieANTLR4Parser")
 set(FRANKIE_ANTLR4_LEXER_PATH ${FRANKIE_SOURCE_DIR}/ANTLR4/PolarFrankieLexer.g4)
 set(FRANKIE_ANTLR4_PARSER_PATH ${FRANKIE_SOURCE_DIR}/ANTLR4/PolarFrankieParser.g4)
-include(${FRANKIE_CMAKE_DIR}/antlr4/generate.cmake)
+include(${FRANKIE_CMAKE_DIR}/ANTLR4/generate.cmake)
 
 # Compile "FrankieANTLR4Parser" files
 message(STATUS "Building ANTLR4 parser...")
