--- a/transpiler/package.json
+++ b/transpiler/package.json
@@ -2,6 +2,6 @@
     "scripts": {
         "rebuild": "npm run clean && npm run build",
         "build": "mkdir build && cd build && cmake .. && cmake --build . --config Release -DCMAKE_BUILD_TYPE=Release",
-        "clean": "rd /s /q build || rm -f -q build"
+        "clean": "rd /s /q build || rm -f -r build"
     }
 }
