Update `cmake` command

--- a/transpiler/CMakeLists.txt
+++ b/transpiler/CMakeLists.txt
@@ -7,14 +7,16 @@ set(FRANKIE_CMAKE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 set(FRANKIE_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/source)
 
 # Include micros
-include(${FRANKIE_CMAKE_DIR}/micros.cmake)
+include(${FRANKIE_CMAKE_DIR}/transpiler-build-micros.cmake)
 
 # Manage dependencies
-include(${FRANKIE_CMAKE_DIR}/dependencies.cmake)
+include(${FRANKIE_CMAKE_DIR}/transpiler-build-dependencies.cmake)
 
 # ANTLR4 files generation...
-# (applys to "FrankieANTLR4Parser")
+# (applys to "FrankieTranspiler" target)
 set(FRANKIE_ANTLR4_LEXER_PATH ${FRANKIE_SOURCE_DIR}/ANTLR4/PolarFrankieLexer.g4)
 set(FRANKIE_ANTLR4_PARSER_PATH ${FRANKIE_SOURCE_DIR}/ANTLR4/PolarFrankieParser.g4)
-set(FRANKIE_ANTLR4_MAIN_CPP_PATH ${FRANKIE_SOURCE_DIR}/parser/main-debug.cpp)
-include(${FRANKIE_CMAKE_DIR}/ANTLR4/generate.cmake)
+set(FRANKIE_MAIN_CPP_PATH ${FRANKIE_SOURCE_DIR}/parser/main-debug.cpp)
+
+# Build executable!
+include(${FRANKIE_CMAKE_DIR}/transpiler-build-executable.cmake)
