--- a/transpiler/CMakeLists.txt
+++ b/transpiler/CMakeLists.txt
@@ -12,8 +12,7 @@ include(${FRANKIE_CMAKE_DIR}/transpiler-build-extra.cmake)
 # Manage dependencies
 include(${FRANKIE_CMAKE_DIR}/transpiler-build-dependencies.cmake)
 
-# ANTLR4 files generation...
-# (applys to "FrankieTranspiler" target)
+# ANTLR4 files generation configuration
 set(FRANKIE_ANTLR4_LEXER_PATH ${FRANKIE_SOURCE_DIR}/ANTLR4/PolarFrankieLexer.g4)
 set(FRANKIE_ANTLR4_PARSER_PATH ${FRANKIE_SOURCE_DIR}/ANTLR4/PolarFrankieParser.g4)
 set(FRANKIE_MAIN_CPP_PATH ${FRANKIE_SOURCE_DIR}/parser/parser.cpp)
