--- a/transpiler/CMakeLists.txt
+++ b/transpiler/CMakeLists.txt
@@ -26,7 +26,7 @@ set(ANTLR4_TAG 4.13.2)
 # ANTLR4 files generation configuration
 set(FRANKIE_ANTLR4_LEXER_PATH ${FRANKIE_SOURCE_DIR}/ANTLR4/PolarFrankieLexer.g4)
 set(FRANKIE_ANTLR4_PARSER_PATH ${FRANKIE_SOURCE_DIR}/ANTLR4/PolarFrankieParser.g4)
-set(FRANKIE_MAIN_CPP_PATH ${FRANKIE_SOURCE_DIR}/parser/parser.cpp)
+set(FRANKIE_MAIN_CPP_PATH ${FRANKIE_SOURCE_DIR}/main.cpp)
 
 # Manage dependencies
 include(${FRANKIE_CMAKE_DIR}/dependencies.cmake)
