--- a/.github/workflows/build_transpiler.yml
+++ b/.github/workflows/build_transpiler.yml
@@ -18,8 +18,8 @@ jobs:
     - name: Install Visual Studio Build Tools
       uses: ilammy/msvc-dev-cmd@v1
 
-    - name: Navigate to "build"
-      run: mkdir ${{github.workspace}}/build && cd ${{github.workspace}}/build
+    - name: Navigate to "transpiler/build"
+      run: mkdir ${{github.workspace}}/transpiler/build && cd ${{github.workspace}}/transpiler/build
 
     - name: Configure CMake
       run: cmake .. -DCMAKE_BUILD_TYPE=Release
@@ -43,8 +43,8 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y build-essential cmake
 
-    - name: Navigate to "build"
-      run: mkdir ${{github.workspace}}/build && cd ${{github.workspace}}/build
+    - name: Navigate to "transpiler/build"
+      run: mkdir ${{github.workspace}}/transpiler/build && cd ${{github.workspace}}/transpiler/build
 
     - name: Configure CMake
       run: cmake .. -DCMAKE_BUILD_TYPE=Release
