--- a/.github/workflows/build_transpiler.yml
+++ b/.github/workflows/build_transpiler.yml
@@ -22,10 +22,10 @@ jobs:
       run: mkdir ${{github.workspace}}/transpiler/build && cd ${{github.workspace}}/transpiler/build
 
     - name: Configure CMake
-      run: cmake .. -DCMAKE_BUILD_TYPE=Release
+      run: cmake ${{github.workspace}}/transpiler -DCMAKE_BUILD_TYPE=Release
 
     - name: Build
-      run: cmake --build . --config Release
+      run: cmake --build ${{github.workspace}}/transpiler/build --config Release
 
     #- name: Run Tests
     #  run: ctest --test-dir ${{github.workspace}}/build --config Release
@@ -47,10 +47,10 @@ jobs:
       run: mkdir ${{github.workspace}}/transpiler/build && cd ${{github.workspace}}/transpiler/build
 
     - name: Configure CMake
-      run: cmake .. -DCMAKE_BUILD_TYPE=Release
+      run: cmake ${{github.workspace}}/transpiler -DCMAKE_BUILD_TYPE=Release
 
     - name: Build
-      run: cmake --build . --config Release
+      run: cmake --build ${{github.workspace}}/transpiler/build --config Release
 
     #- name: Run Tests
     #  run: ctest --test-dir ${{github.workspace}}/build --config Release
