--- a/.github/workflows/build_transpiler.yml
+++ b/.github/workflows/build_transpiler.yml
@@ -18,6 +18,12 @@ jobs:
     - name: Install Visual Studio Build Tools
       uses: ilammy/msvc-dev-cmd@v1
 
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin' # or 'adopt' before temurin.
+
     - name: Navigate to "transpiler/build"
       run: mkdir ${{github.workspace}}/transpiler/build && cd ${{github.workspace}}/transpiler/build
 
