--- a/.github/workflows/build_transpiler.yml
+++ b/.github/workflows/build_transpiler.yml
@@ -24,14 +24,16 @@ jobs:
         java-version: '11'
         distribution: 'temurin' # or 'adopt' before temurin.
 
-    - name: Navigate to "transpiler/build"
-      run: mkdir ${{github.workspace}}/transpiler/build && cd ${{github.workspace}}/transpiler/build
+    - name: Make the "transpiler/build" directory
+      run: mkdir ${{github.workspace}}/transpiler/build
 
     - name: Configure CMake
-      run: cd ${{github.workspace}}/transpiler/build && cmake ${{github.workspace}}/transpiler -DCMAKE_BUILD_TYPE=Release
+      run: cmake .. -DCMAKE_BUILD_TYPE=Release
+      working-directory: transpiler/build
 
     - name: Build
-      run: cd ${{github.workspace}}/transpiler/build && cmake --build ${{github.workspace}}/transpiler/build --config Release
+      run: cmake --build . --config Release
+      working-directory: transpiler/build
 
     #- name: Run Tests
     #  run: ctest --test-dir ${{github.workspace}}/build --config Release
@@ -49,14 +51,16 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y build-essential cmake
 
-    - name: Navigate to "transpiler/build"
-      run: mkdir ${{github.workspace}}/transpiler/build && cd ${{github.workspace}}/transpiler/build
+    - name: Make the "transpiler/build" directory
+      run: mkdir ${{github.workspace}}/transpiler/build
 
     - name: Configure CMake
-      run: cmake ${{github.workspace}}/transpiler -DCMAKE_BUILD_TYPE=Release
+      run: cmake .. -DCMAKE_BUILD_TYPE=Release
+      working-directory: transpiler/build
 
     - name: Build
-      run: cmake --build ${{github.workspace}}/transpiler/build --config Release
+      run: cmake --build . --config Release
+      working-directory: transpiler/build
 
     #- name: Run Tests
     #  run: ctest --test-dir ${{github.workspace}}/build --config Release
