--- a/.github/workflows/build_transpiler.yml
+++ b/.github/workflows/build_transpiler.yml
@@ -15,14 +15,14 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Install Visual Studio Build Tools
-      uses: ilammy/msvc-dev-cmd@v1
-
-    - name: Set up JDK 11
+    - name: Set up JDK 11 (or later)
       uses: actions/setup-java@v3
       with:
         java-version: '11'
-        distribution: 'temurin' # or 'adopt' before temurin.
+        distribution: 'temurin'
+
+    - name: Install Visual Studio Build Tools
+      uses: ilammy/msvc-dev-cmd@v1
 
     - name: Make the "transpiler/build" directory
       run: mkdir ${{github.workspace}}/transpiler/build
