--- a/.github/workflows/build_transpiler.yml
+++ b/.github/workflows/build_transpiler.yml
@@ -21,8 +21,8 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
 
-    - name: Install Visual Studio 2022 Community with C++ support
-    - uses: ilammy/msvc-dev-cmd@v1.4.1
+    - name: Install Visual Studio Build Tools
+      uses: ilammy/msvc-dev-cmd@v1.13.0
 
     - name: Make the "transpiler/build" directory
       run: mkdir ${{github.workspace}}/transpiler/build
