--- a/transpiler/CMakeLists.txt
+++ b/transpiler/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Basic info
 cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
 project(polar_frankie_transpiler)
+enable_testing()
 
 # Directories
 set(FRANKIE_CMAKE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
