--- a/.github/workflows/build_transpiler.yml
+++ b/.github/workflows/build_transpiler.yml
@@ -8,7 +8,7 @@ on:
 jobs:
 
   # Windows
-  build-windows-latest:
+  build-transpiler-on-windows-latest:
     runs-on: windows-latest
 
     steps:
@@ -40,7 +40,7 @@ jobs:
       working-directory: transpiler/build
 
   # Linux
-  build-ubuntu-latest:
+  build-transpiler-on-ubuntu-latest:
     runs-on: ubuntu-latest
 
     steps:
