--- a/transpiler/package.json
+++ b/transpiler/package.json
@@ -1,8 +1,10 @@
 {
     "scripts": {
-        "rebuild": "npm run clean && mkdir build && npm run build",
+        "win-rebuild": "npm run win-clean && mkdir build && npm run build",
+        "lix-rebuild": "npm run lix-clean && mkdir build && npm run build",
         "build": "cd build && cmake .. -DCMAKE_BUILD_TYPE=Release && cmake --build . --config Release",
-        "clean": "rd /s /q build || rm -f -r build",
+        "win-clean": "rd /s /q build",
+        "lix-clean": "rm -f -r build",
         "test": "cd build && ctest -C Release",
         "tmp-win-debug": "npm run rebuild && npm run test && .\\build\\Release\\FrankieTranspiler.exe --debug-parser-print-test .\\..\\debug.frankie"
     }
