--- a/transpiler/package.json
+++ b/transpiler/package.json
@@ -6,6 +6,6 @@
         "win-clean": "rd /s /q build",
         "lix-clean": "rm -f -r build",
         "test": "cd build && ctest -C Release",
-        "tmp-win-debug": "npm run rebuild && npm run test && .\\build\\Release\\FrankieTranspiler.exe --debug-parser-print-test .\\..\\debug.frankie"
+        "tmp-win-debug": "npm run win-rebuild && npm run test && .\\build\\Release\\FrankieTranspiler.exe --debug-parser-print-test .\\..\\debug.frankie"
     }
 }
