--- a/transpiler/package.json
+++ b/transpiler/package.json
@@ -3,8 +3,8 @@
         "win-rebuild": "npm run win-clean && mkdir build && npm run build",
         "lix-rebuild": "npm run lix-clean && mkdir build && npm run build",
         "build": "cd build && cmake .. -DCMAKE_BUILD_TYPE=Release && cmake --build . --config Release",
-        "win-clean": "rd /s /q build",
-        "lix-clean": "rm -f -r build",
+        "win-clean": "rd /s /q build && rd /s /q dist",
+        "lix-clean": "rm -f -r build && rm -f -r dist",
         "test": "cd build && ctest -C Release",
         "tmp-win-debug": "npm run win-rebuild && npm run test && .\\dist\\bin\\FrankieTranspiler.exe --debug-parser-print-test .\\..\\debug.frankie"
     }
