--- a/.github/workflows/build_transpiler.yml
+++ b/.github/workflows/build_transpiler.yml
@@ -66,3 +66,31 @@ jobs:
     - name: Run Tests
       run: ctest -VV -C Release
       working-directory: transpiler/build
+
+  # macOS
+  build-transpiler-on-macos-latest:
+    runs-on: macos-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Install dependencies
+      run: |
+        brew update
+        brew install cmake
+
+    - name: Make the "transpiler/build" directory
+      run: mkdir ${{github.workspace}}/transpiler/build
+
+    - name: Configure CMake
+      run: cmake .. -DCMAKE_BUILD_TYPE=Release
+      working-directory: transpiler/build
+
+    - name: Build
+      run: cmake --build . --config Release
+      working-directory: transpiler/build
+
+    - name: Run Tests
+      run: ctest -VV -C Release
+      working-directory: transpiler/build
