--- a/.github/workflows/build_vscode_extension.yml
+++ b/.github/workflows/build_vscode_extension.yml
@@ -23,34 +23,34 @@ jobs:
       run: npm run win-package
       working-directory: supplements/VSCode-Extension
 
-  # Linux
-  build-vscode-extension-on-ubuntu-latest:
-    runs-on: ubuntu-latest
+#  # Linux
+#  build-vscode-extension-on-ubuntu-latest:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#    - name: Checkout code
+#      uses: actions/checkout@v3
+#
+#    - name: Install NodeJS dependencies
+#      run: npm i
+#      working-directory: supplements/VSCode-Extension
+#
+#    - name: Package the VSCode Extension
+#      run: npm run lix-package
+#      working-directory: supplements/VSCode-Extension
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Install NodeJS dependencies
-      run: npm i
-      working-directory: supplements/VSCode-Extension
-
-    - name: Package the VSCode Extension
-      run: npm run lix-package
-      working-directory: supplements/VSCode-Extension
-
-  # macOS
-  build-vscode-extension-on-macos-latest:
-    runs-on: macos-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Install NodeJS dependencies
-      run: npm i
-      working-directory: supplements/VSCode-Extension
-
-    - name: Package the VSCode Extension
-      run: npm run lix-package
-      working-directory: supplements/VSCode-Extension
+#  # macOS
+#  build-vscode-extension-on-macos-latest:
+#    runs-on: macos-latest
+#
+#    steps:
+#    - name: Checkout code
+#      uses: actions/checkout@v3
+#
+#    - name: Install NodeJS dependencies
+#      run: npm i
+#      working-directory: supplements/VSCode-Extension
+#
+#    - name: Package the VSCode Extension
+#      run: npm run lix-package
+#      working-directory: supplements/VSCode-Extension
