--- a/.github/workflows/build_vscode_extension.yml
+++ b/.github/workflows/build_vscode_extension.yml
@@ -1,9 +1,17 @@
 name: VSCode Extension
 on:
   push:
-    branches: [ "main" ]
+    branches: 
+    - "main"
   pull_request:
-    branches: [ "main" ]
+    branches: 
+    - "main"
+  workflow_call: # Added this line to make it reusable
+    # Add inputs here if needed. Example:
+    # inputs:
+    #   some_input:
+    #     required: true
+    #     type: boolean
 
 jobs:
 
