--- a/.github/workflows/transpiler_release_build.yml
+++ b/.github/workflows/transpiler_release_build.yml
@@ -1,9 +1,19 @@
 name: Transpiler (Release)
 on:
   push:
-    branches: [ "main" ]
+    branches: 
+    - "main"
   pull_request:
-    branches: [ "main" ]
+    branches: 
+    - "main"
+  workflow_call: # Added this line to make it reusable
+    # Add inputs here if needed. Example:
+    # inputs:
+    #   some_input:
+    #     required: false
+    #     type: string
+
+# -win32-arm64 -win32-ia32 -win32-x64 -darwin-arm64 -darwin-x64 -linux-arm64 -linux-armv7l -linux-x64 -mas-arm64 -mas-x64
 
 jobs:
 
@@ -38,6 +48,24 @@ jobs:
     - name: Run Tests
       run: ctest -VV -C Release
       working-directory: transpiler/build
+
+#    - name: Bundle Binaries (only on workflow_call)
+#      if: github.event_name == 'workflow_call'
+#      run: |
+#        Compress-Archive -Path ${{github.workspace}}/transpiler/dist/Release/* -DestinationPath ${{github.workspace}}/transpiler/dist/bundle.zip
+
+#    - name: Extract version (only on workflow_call)
+#      if: github.event_name == 'workflow_call'
+#      run: |
+#        VERSION=$(grep -oP '(?<=VERSION=").*?(?=")' ${{github.workspace}}/transpiler/manifest.ini)
+#        echo "VERSION=$VERSION" >> $GITHUB_ENV
+
+#    - name: Upload Binaries Artifact (only on workflow_call)
+#      if: github.event_name == 'workflow_call'
+#      uses: actions/upload-artifact@v4
+#      with:
+#        name: PolarFrankie-v${{env.VERSION}}-win32-x64.zip
+#        path: ${{github.workspace}}/transpiler/dist/bundle.zip
 
   # Linux
   build-transpiler-release-on-ubuntu-latest:
