--- a/.github/workflows/transpiler_release_build.yml
+++ b/.github/workflows/transpiler_release_build.yml
@@ -18,7 +18,8 @@ on:
 jobs:
 
   # Windows
-  build-transpiler-release-on-windows-latest:
+  build-transpiler-release-on-windows-latest-x86-64:
+    name: Windows 32-bits
     runs-on: windows-latest
 
     steps:
@@ -49,23 +50,23 @@ jobs:
       run: ctest -VV -C Release
       working-directory: transpiler/build
 
-#    - name: Bundle Binaries (only on workflow_call)
+    - name: Bundle Binaries (only on workflow_call)
 #      if: github.event_name == 'workflow_call'
-#      run: |
-#        Compress-Archive -Path ${{github.workspace}}/transpiler/dist/Release/* -DestinationPath ${{github.workspace}}/transpiler/dist/bundle.zip
+      run: |
+        Compress-Archive -Path ${{github.workspace}}/transpiler/dist/Release/x86_64/* -DestinationPath ${{github.workspace}}/transpiler/dist/bundle.zip
 
-#    - name: Extract version (only on workflow_call)
+    - name: Extract version (only on workflow_call)
 #      if: github.event_name == 'workflow_call'
-#      run: |
-#        VERSION=$(grep -oP '(?<=VERSION=").*?(?=")' ${{github.workspace}}/transpiler/manifest.ini)
-#        echo "VERSION=$VERSION" >> $GITHUB_ENV
+      run: |
+        VERSION=$(grep -oP '(?<=VERSION=").*?(?=")' ${{github.workspace}}/transpiler/manifest.ini)
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
 
-#    - name: Upload Binaries Artifact (only on workflow_call)
+    - name: Upload Binaries Artifact (only on workflow_call)
 #      if: github.event_name == 'workflow_call'
-#      uses: actions/upload-artifact@v4
-#      with:
-#        name: PolarFrankie-v${{env.VERSION}}-win32-x64.zip
-#        path: ${{github.workspace}}/transpiler/dist/bundle.zip
+      uses: actions/upload-artifact@v4
+      with:
+        name: PolarFrankie-v${{env.VERSION}}-arch-x86_64.zip
+        path: ${{github.workspace}}/transpiler/dist/bundle.zip
 
   # Linux
   build-transpiler-release-on-ubuntu-latest:
