--- a/transpiler/CMakeLists.txt
+++ b/transpiler/CMakeLists.txt
@@ -21,13 +21,6 @@ set(CMAKE_MODULE_PATH
     ${CMAKE_MODULE_PATH}
 )
 
-# VERSION CONTROL
-# Manage the versions for used dependencies
-# {fmt} library
-set(FMT_LIB_VERSION 11.1.3)
-# ANTLR4
-set(ANTLR4_TAG 4.13.2)
-
 # ANTLR4 files generation configuration
 set(FRANKIE_ANTLR4_LEXER_PATH ${FRANKIE_SOURCE_DIR}/ANTLR4/PolarFrankieLexer.g4)
 set(FRANKIE_ANTLR4_PARSER_PATH ${FRANKIE_SOURCE_DIR}/ANTLR4/PolarFrankieParser.g4)
@@ -38,6 +31,8 @@ include(FetchContent)
 # Force PIC generation
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
+# Manage compiler settings
+include(${FRANKIE_CMAKE_DIR}/compiler/cpp.cmake)
 
 # Manage binary output
 include(${FRANKIE_CMAKE_DIR}/build-output.cmake)
