--- a/transpiler/package.json
+++ b/transpiler/package.json
@@ -1,16 +1,12 @@
 {
     "scripts": {
-        "win-rebuild-cmake": "npm run win-clean && mkdir build && npm run build-cmake",
-        "lix-rebuild-cmake": "npm run lix-clean && mkdir build && npm run build-cmake",
-        "win-debug-rebuild-cmake": "npm run win-clean && mkdir build && npm run debug-build-cmake",
-        "lix-debug-rebuild-cmake": "npm run lix-clean && mkdir build && npm run debug-build-cmake",
-        "build-cmake": "cd build && cmake .. -DCMAKE_BUILD_TYPE=Release",
+        "build-cmake": "cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -A ARM64",
         "build-binary": "cd build && cmake --build . --config Release",
         "debug-build-cmake": "cd build && cmake .. -DCMAKE_BUILD_TYPE=Debug",
         "debug-build-binary": "cd build && cmake --build . --config Debug",
         "win-clean": "rd /s /q build && rd /s /q dist",
         "lix-clean": "rm -f -r build && rm -f -r dist",
         "test": "cd build && ctest -VV -C Release",
-        "tmp-win-debug": "npm run win-rebuild-cmake && npm run build-binary && npm run test && .\\dist\\Release\\bin\\FrankieTranspiler.exe --debug-parser-antlr-print-test .\\..\\debug.frankie"
+        "tmp-win-debug": "npm run test && .\\dist\\Release\\bin\\FrankieTranspiler.exe --debug-parser-antlr-print-test .\\..\\debug.frankie"
     }
 }
