--- a/.github/workflows/transpiler_release_build.yml
+++ b/.github/workflows/transpiler_release_build.yml
@@ -58,9 +58,13 @@ jobs:
     - name: Extract version (only on workflow_call)
 #      if: github.event_name == 'workflow_call'
       run: |
-        for /f "tokens=2 delims==" %%i in ('findstr /C:"VERSION=" ${{github.workspace}}/transpiler/manifest.ini') do (
-          echo "VERSION=%%i" >> $GITHUB_ENV
-        )
+        $version = Get-Content "${{github.workspace}}/transpiler/manifest.ini" | Where-Object { $_ -match 'VERSION=' } | ForEach-Object { ($_ -split '=')[1].Trim('"') }
+        if ($version) {
+          echo "VERSION=$version" >> $env:GITHUB_ENV
+        } else {
+          Write-Error "VERSION not found in manifest.ini"
+          exit 1
+        }
 
     - name: Upload Binaries Artifact (only on workflow_call)
 #      if: github.event_name == 'workflow_call'
@@ -105,7 +109,7 @@ jobs:
     - name: Extract version (only on workflow_call) AAAAAAAA
 #      if: github.event_name == 'workflow_call'
       run: |
-        VERSION=$(grep -oP '(?<=VERSION=").*?(?=")' ${{github.workspace}}/transpiler/manifest.ini)
+        VERSION=$(grep "^version" ${{github.workspace}}/transpiler/manifest.ini | sed 's/version *= *//')
         echo "VERSION=$VERSION" >> $GITHUB_ENV
 
     - name: Upload Binaries Artifact (only on workflow_call) AAAAAAAA
