Update overkflow actions

--- a/transpiler/package.json
+++ b/transpiler/package.json
@@ -1,6 +1,10 @@
 {
     "scripts": {
-        "build-cmake": "cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -A ARM64",
+        "build-cmake-win-32": "cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -A Win32",
+        "build-cmake-win-64": "cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -A x64",
+        "build-cmake-lix-32": "cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_GENERATOR_PLATFORM x32",
+        "build-cmake-lix-64": "cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_GENERATOR_PLATFORM x64",
+        "build-cmake": "cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -A x32",
         "build-binary": "cd build && cmake --build . --config Release",
         "debug-build-cmake": "cd build && cmake .. -DCMAKE_BUILD_TYPE=Debug",
         "debug-build-binary": "cd build && cmake --build . --config Debug",
