--- a/.github/workflows/transpiler_release_build.yml
+++ b/.github/workflows/transpiler_release_build.yml
@@ -91,7 +91,7 @@ jobs:
       run: mkdir ${{github.workspace}}/transpiler/build
 
     - name: Configure CMake
-      run: cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_GENERATOR_PLATFORM x64
+      run: cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_GENERATOR_PLATFORM=x64
       working-directory: transpiler/build
 
     - name: Build
@@ -138,7 +138,7 @@ jobs:
       run: mkdir ${{github.workspace}}/transpiler/build
 
     - name: Configure CMake
-      run: cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_GENERATOR_PLATFORM x64
+      run: cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_GENERATOR_PLATFORM=x64
       working-directory: transpiler/build
 
     - name: Build
