--- a/.github/workflows/transpiler_release_build.yml
+++ b/.github/workflows/transpiler_release_build.yml
@@ -53,7 +53,7 @@ jobs:
     - name: Bundle Binaries (only on workflow_call)
 #      if: github.event_name == 'workflow_call'
       run: |
-        tar -czvf ${{github.workspace}}/transpiler/dist/Release/x86_64/* -DestinationPath ${{github.workspace}}/transpiler/dist/bundle.tar
+        tar -cvf ${{github.workspace}}/transpiler/dist/Release/x86_64/* -DestinationPath ${{github.workspace}}/transpiler/dist/bundle.tar
 
     - name: Extract version (only on workflow_call)
 #      if: github.event_name == 'workflow_call'
