--- a/.github/workflows/transpiler.yml
+++ b/.github/workflows/transpiler.yml
@@ -13,12 +13,14 @@ jobs:
 
   # Release
   build-transpiler-release:
+    name: Release
     uses: ./.github/workflows/_transpiler_dynamic_build.yml
     with:
       build_mode: "Release"
 
   # Debug
   build-transpiler-debug:
+    name: Debug
     uses: ./.github/workflows/_transpiler_dynamic_build.yml
     with:
       build_mode: "Debug"
