--- a/.github/workflows/_transpiler_dynamic_build.yml
+++ b/.github/workflows/_transpiler_dynamic_build.yml
@@ -60,7 +60,7 @@ jobs:
 #      if: github.event_name == 'workflow_call'
       uses: actions/upload-artifact@v4
       with:
-        name: PolarFrankie-v${{env.VERSION}}-Windows-x86_64
+        name: PolarFrankie-v${{env.VERSION}}-Windows-x86_64-${{inputs.build_mode}}
         path: ${{github.workspace}}/transpiler/dist/bundle.tar
 
   # Linux
@@ -107,7 +107,7 @@ jobs:
 #      if: github.event_name == 'workflow_call'
       uses: actions/upload-artifact@v4
       with:
-        name: PolarFrankie-v${{env.VERSION}}-Linux-x86_64
+        name: PolarFrankie-v${{env.VERSION}}-Linux-x86_64-${{inputs.build_mode}}
         path: ${{github.workspace}}/transpiler/dist/bundle.tar
 
   # macOS
@@ -154,5 +154,5 @@ jobs:
 #      if: github.event_name == 'workflow_call'
       uses: actions/upload-artifact@v4
       with:
-        name: PolarFrankie-v${{env.VERSION}}-macOS-x86_64
+        name: PolarFrankie-v${{env.VERSION}}-macOS-x86_64-${{inputs.build_mode}}
         path: ${{github.workspace}}/transpiler/dist/bundle.tar
