--- a/.github/workflows/transpiler.yml
+++ b/.github/workflows/transpiler.yml
@@ -17,6 +17,7 @@ jobs:
     uses: ./.github/workflows/_transpiler_dynamic_build.yml
     with:
       build_mode: "Debug"
+      bundle_binaries: false
 
   # Release
   build-transpiler-release:
@@ -25,3 +26,4 @@ jobs:
     uses: ./.github/workflows/_transpiler_dynamic_build.yml
     with:
       build_mode: "Release"
+      bundle_binaries: true
