--- a/.github/workflows/_transpiler_dynamic_build.yml
+++ b/.github/workflows/_transpiler_dynamic_build.yml
@@ -48,7 +48,7 @@ jobs:
       run: |
         tar -cvf ${{github.workspace}}/transpiler/dist/bundle.tar ${{github.workspace}}/transpiler/dist/${{inputs.build_mode}}/x86_64/*
 
-    - name: Bundle Binaries (optional)
+    - name: Extract version (optional)
       if: inputs.bundle_binaries
       run: |
         $version = Get-Content "${{github.workspace}}/transpiler/manifest.ini" | Where-Object { $_ -match 'VERSION=' } | ForEach-Object { ($_ -split '=')[1].Trim('"') }
@@ -59,7 +59,7 @@ jobs:
           exit 1
         }
 
-    - name: Bundle Binaries (optional)
+    - name: Upload Binaries Artifact (optional)
       if: inputs.bundle_binaries
       uses: actions/upload-artifact@v4
       with:
@@ -100,13 +100,13 @@ jobs:
       run: |
         tar -cvf ${{github.workspace}}/transpiler/dist/bundle.tar ${{github.workspace}}/transpiler/dist/${{inputs.build_mode}}/x86_64/*
 
-    - name: Bundle Binaries (optional)
+    - name: Extract version (optional)
       if: inputs.bundle_binaries
       run: |
         VERSION=$(grep "^version" ${{github.workspace}}/transpiler/manifest.ini | sed 's/version *= *//')
         echo "VERSION=$VERSION" >> $GITHUB_ENV
 
-    - name: Bundle Binaries (optional)
+    - name: Upload Binaries Artifact (optional)
       if: inputs.bundle_binaries
       uses: actions/upload-artifact@v4
       with:
@@ -147,13 +147,13 @@ jobs:
       run: |
         tar -cvf ${{github.workspace}}/transpiler/dist/bundle.tar ${{github.workspace}}/transpiler/dist/${{inputs.build_mode}}/x86_64/*
 
-    - name: Bundle Binaries (optional)
+    - name: Extract version (optional)
       if: inputs.bundle_binaries
       run: |
         VERSION=$(grep "^version" ${{github.workspace}}/transpiler/manifest.ini | sed 's/version *= *//')
         echo "VERSION=$VERSION" >> $GITHUB_ENV
 
-    - name: Bundle Binaries (optional)
+    - name: Upload Binaries Artifact (optional)
       if: inputs.bundle_binaries
       uses: actions/upload-artifact@v4
       with:
