--- a/.github/workflows/_transpiler_dynamic_build.yml
+++ b/.github/workflows/_transpiler_dynamic_build.yml
@@ -43,12 +43,6 @@ jobs:
       run: ctest -VV -C ${{inputs.build_mode}}
       working-directory: transpiler/build
 
-    - name: Bundle Binaries (optional)
-      if: inputs.bundle_binaries
-      run: |
-        tar -cvf ${{github.workspace}}/transpiler-bundle.tar *
-      working-directory: ${{github.workspace}}/transpiler/dist/${{inputs.build_mode}}/x86_64/
-
     - name: Extract version (optional)
       if: inputs.bundle_binaries
       run: |
@@ -65,7 +59,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: PolarFrankie-v${{env.VERSION}}-Windows-x86_64-${{inputs.build_mode}}
-        path: ${{github.workspace}}/transpiler-bundle.tar
+        path: ${{github.workspace}}/transpiler/dist/${{inputs.build_mode}}/x86_64/
 
   # Linux
   build-transpiler-on-ubuntu-latest-x86-64:
@@ -96,12 +90,6 @@ jobs:
       run: ctest -VV -C ${{inputs.build_mode}}
       working-directory: transpiler/build
 
-    - name: Bundle Binaries (optional)
-      if: inputs.bundle_binaries
-      run: |
-        tar -cvf ${{github.workspace}}/transpiler-bundle.tar *
-      working-directory: ${{github.workspace}}/transpiler/dist/${{inputs.build_mode}}/x86_64/
-
     - name: Extract version (optional)
       if: inputs.bundle_binaries
       run: |
@@ -113,7 +101,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: PolarFrankie-v${{env.VERSION}}-Linux-x86_64-${{inputs.build_mode}}
-        path: ${{github.workspace}}/transpiler-bundle.tar
+        path: ${{github.workspace}}/transpiler/dist/${{inputs.build_mode}}/x86_64/
 
   # macOS
   build-transpiler-on-macos-latest-x86-64:
@@ -144,12 +132,6 @@ jobs:
       run: ctest -VV -C ${{inputs.build_mode}}
       working-directory: transpiler/build
 
-    - name: Bundle Binaries (optional)
-      if: inputs.bundle_binaries
-      run: |
-        tar -cvf ${{github.workspace}}/transpiler-bundle.tar *
-      working-directory: ${{github.workspace}}/transpiler/dist/${{inputs.build_mode}}/x86_64/
-
     - name: Extract version (optional)
       if: inputs.bundle_binaries
       run: |
@@ -161,4 +143,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: PolarFrankie-v${{env.VERSION}}-macOS-x86_64-${{inputs.build_mode}}
-        path: ${{github.workspace}}/transpiler-bundle.tar
+        path: ${{github.workspace}}/transpiler/dist/${{inputs.build_mode}}/x86_64/
